[project]
name = "jumpstarter-driver-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Cao", email = "nickcao@nichi.co" }
]
requires-python = ">=3.12"
dependencies = [
    "jumpstarter",
]

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
jumpstarter = { git = "https://github.com/jumpstarter-dev/jumpstarter.git" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
